--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes, user-scalable=no, viewport-fit=cover">
 			<meta name="theme-color" content="#000000">
 			<meta content="IE=Edge" http-equiv="X-UA-Compatible">
+            <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
 			<title>TheormechApp</title>
 		<!-- This is necessary to prevent bounce effect on extra scroll.
  				Dont know why css file doesnt work, you still should try it -->
