main window layout

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 		<!-- This is necessary to prevent bounce effect on extra scroll.
  				Dont know why css file doesnt work, you still should try it -->
 		<style>
-			html, body {
-				height: 100%;
-				overflow: hidden;
-			}
+			/*html, body {*/
+			/*	height: 100%;*/
+			/*	overflow: hidden;*/
+			/*}*/
 
 		</style>
 	</head>
