--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,17 @@
 		<!-- This is necessary to prevent bounce effect on extra scroll.
  				Dont know why css file doesnt work, you still should try it -->
 		<style>
-			/*html, body {*/
-			/*	height: 100%;*/
-			/*	overflow: hidden;*/
-			/*}*/
+			html, body {
+				height: 100%;
+				overflow: hidden;
+			}
+
+			#root {
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+			}
+
 
 		</style>
 	</head>
