--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,23 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=yes, user-scalable=no, viewport-fit=cover">
     <meta name="theme-color" content="#000000">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
           rel="stylesheet">
     <title>TheormechApp</title>
     <!-- This is necessary to prevent bounce effect on extra scroll.
              Dont know why css file doesnt work, you still should try it -->
     <style>
-        html, body {
-            height: 100%;
-            overflow: hidden;
-        }
+        /*html, body {*/
+        /*    height: 100%;*/
+        /*    overflow: hidden;*/
+        /*}*/
 
-        #root {
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
+        /*#root {*/
+        /*    height: 100%;*/
+        /*    width: 100%;*/
+        /*    overflow: hidden;*/
+        /*}*/
 
 
     </style>
