--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,11 @@
             overflow: hidden;
         }
 
-        #root {
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-
-
+        /*#root {*/
+        /*    height: 100%;*/
+        /*    width: 100%;*/
+        /*    overflow: hidden;*/
+        /*}*/
     </style>
 </head>
 <body>
