beta sign added

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
             overflow: hidden;
         }
 
+        html::after {
+            content: "beta: 0.2.1";
+            position: absolute;
+            z-index: 1000;
+            top: calc(100% - 1em);
+            left: 0;
+            color: #838383;
+        }
+
         /*#root {*/
         /*    height: 100%;*/
         /*    width: 100%;*/
