double tap fixed

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             height: 100%;
             overflow: hidden;
             overscroll-behavior: contain;
-            touch-action: manipulation;
+            touch-action: none;
         }
 
         html::after {
