--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
             color: #838383;
         }
 
-        /*#root {*/
-        /*    height: 100%;*/
-        /*    width: 100%;*/
-        /*    overflow: hidden;*/
-        /*}*/
+        #root {
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
