--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-<!--    <meta name="viewport"-->
-<!--          content="width=device-width, initial-scale=1, shrink-to-fit=yes, user-scalable=no, viewport-fit=cover">-->
-<!--    <meta name="theme-color" content="#000000">-->
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=yes, user-scalable=no, viewport-fit=cover">
+    <meta name="theme-color" content="#000000">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
